--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div>
             <div>
               <h3>
-                <a href="https://glennsantos.com/portfolio/cv-to-jd-comparison-ai-agent/" target="_blank" rel="noopener">CV-to-JD Comparison AI Agent</a>
+                <a href="https://github.com/glennsantos/resume-review-agent" target="_blank" rel="noopener">CV-to-JD Comparison AI Agent</a>
               </h3>
               <p>A resume analysis tool that helps HR teams and recruiters objectively evaluate candidate fit versus their job description.</p>
             </div>
@@ -86,7 +86,7 @@
           <div>
             <div>
               <h3>
-                <a href="https://glennsantos.com/portfolio/location-viability-app/" target="_blank" rel="noopener">Retail Location Viability Analyzer</a>
+                <a href="https://lnkd.in/p/gCxFYA8c" target="_blank" rel="noopener">Retail Location Viability Analyzer</a>
               </h3>
               <p>A web-based application for analyzing foot traffic indicators in specific locations using OpenStreetMap data.</p>
             </div>
@@ -96,7 +96,7 @@
           <div>
             <div>
               <h3>
-                <a href="https://glennsantos.com/portfolio/sales-reporting-webapp/" target="_blank" rel="noopener">Sales Reporting Webapp</a>
+                <a href="https://lnkd.in/p/gf2Z3BkG" target="_blank" rel="noopener">Sales Reporting Webapp</a>
               </h3>
               <p>A mobile-first webapp for digitizing sales reports for an equipment manufacturer, removing dependencies on paper forms and chat messages.</p>
             </div>
@@ -126,7 +126,7 @@
           <div>
             <div>
               <h3>
-                <a href="https://199jobs.com" target="_blank" rel="noopener">199Jobs</a>
+                <a href="https://www.techinasia.com/meet-199jobs-philippines-answer-fiverr" target="_blank" rel="noopener">199Jobs</a>
               </h3>
               <p>An ecommerce service marketplace in the Philippines that connects buyers and sellers. Averages 29% yearly growth with 7,000 MAU.</p>
             </div>
@@ -136,7 +136,7 @@
           <div>
             <div>
               <h3>
-                <a href="https://glennsantos.com/portfolio/mobile-application-development-using-app-inventor-book/" target="_blank" rel="noopener">Mobile Application Development using App Inventor [Book]</a>
+                <a href="" target="_blank" rel="noopener">Mobile Application Development using App Inventor [Book]</a>
               </h3>
               <p>A programming book teaching teens how to create mobile apps using MIT App Inventor with a learning-by-doing approach.</p>
             </div>
@@ -156,7 +156,7 @@
           <div>
             <div>
               <h3>
-                <a href="https://glennsantos.com/portfolio/cash-deposit-machine-backend-system-and-apis/" target="_blank" rel="noopener">Cash Deposit Machine Backend System and APIs</a>
+                <a href="" target="_blank" rel="noopener">Cash Deposit Machine Backend System and APIs</a>
               </h3>
               <p>A backend system with APIs for managing cash deposit machines/ATMs, enabling remote management with encryption and strict permissions.</p>
             </div>
@@ -166,7 +166,7 @@
           <div>
             <div>
               <h3>
-                <a href="https://glennsantos.com/portfolio/developer-mentorship-program/" target="_blank" rel="noopener">Developer Mentorship Program</a>
+                <a href="https://tally.so/r/3leK5w" target="_blank" rel="noopener">Developer Mentorship Program</a>
               </h3>
               <p>A mentorship program to help developers become leaders, using a low-code backend to match developers with mentors.</p>
             </div>
@@ -196,7 +196,7 @@
           <div>
             <div>
               <h3>
-                <a href="https://glennsantos.com/portfolio/time-tracking-tool/" target="_blank" rel="noopener">Time Tracking Tool</a>
+                <a href="" target="_blank" rel="noopener">Time Tracking Tool</a>
               </h3>
               <p>A tool used to track manhours spent on projects, generate reports and keep projects on time and on budget.</p>
             </div>
@@ -206,7 +206,7 @@
           <div>
             <div>
               <h3>
-                <a href="https://glennsantos.com/portfolio/resume-and-job-post-parsing/" target="_blank" rel="noopener">Resume and Job Post Parsing</a>
+                <a href="" target="_blank" rel="noopener">Resume and Job Post Parsing</a>
               </h3>
               <p>A CLI app comparing skills in a resume to a job posting using document parsing, crawlers, and regex.</p>
             </div>
