Update footer link in index.html to point to the new portfolio URL

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 </main>
 
 <footer>
-    Glenn Santos | Helping Developers Become Leaders | portfolio inspired by <a href="https://github.com/ziyadsk" target="_blank" rel="noopener">Ziyad</a>
+    Glenn Santos | Helping Developers Become Leaders | portfolio inspired by <a href="https://ziyadsk.github.io/portfolio-V2/" target="_blank" rel="noopener">Ziyad</a>
 </footer>
 
 <script src="js/index.js"></script> 
