--- a/leader-quiz.html
+++ b/leader-quiz.html
@@ -209,7 +209,7 @@
 
                 <div class="mt-8 text-center space-x-4">
                     <!-- New Share Button -->
-                    <button onclick="shareResults()" id="shareButton" class="bg-indigo-500 text-white font-bold py-2 px-6 rounded-lg hover:bg-indigo-600 focus:outline-none focus:ring-2 focus:ring-indigo-400 transition duration-300">
+                    <button onclick="shareResults()" id="shareButton" class="bg-indigo-500 text-white font-bold py-2 px-6 rounded-lg hover:bg-indigo-600 focus:outline-none focus:ring-2 focus:ring-indigo-400 transition duration-300 mb-4">
                         Share My Results
                     </button>
                     <button onclick="retakeQuiz()" class="bg-gray-200 text-gray-800 font-bold py-2 px-6 rounded-lg hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 transition duration-300">
