refactor: Update LinkedIn link to use custom branded URL
The LinkedIn profile link in the "Let's Connect" section of the homepage has been updated. It now points to `https://glennsantos.com/linkedin` instead of the direct LinkedIn profile URL. This change provides a more consistent and branded experience for external links, allowing for better control and potential future analytics.

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       <h2>Let's Connect:</h2>
         <div>
             <a class="link-email" href="mailto:homepage@glennsantos.com" target="_blank" rel="noopener">Email</a>
-            <a class="link-linkedin" href="https://www.linkedin.com/in/glennsantos/" target="_blank" rel="noopener">LinkedIn</a>
+            <a class="link-linkedin" href="https://glennsantos.com/linkedin" target="_blank" rel="noopener">LinkedIn</a>
             <a class="link-resume" href="https://glennsantos.com/resume" target="_blank" rel="noopener">Resume</a>
         </div>
     </section>
