--- a/leader-quiz.html
+++ b/leader-quiz.html
@@ -68,118 +68,85 @@
         </header>
 
         <form id="leadershipQuiz">
-            
-            <!-- Category 1: Promotes Psychological Safety (Previously Positive Work Environment) -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-semibold text-gray-700 mb-4 pb-2 border-b-2 border-indigo-200">1. Promotes Psychological Safety</h2>
-                <div class="bg-white rounded-lg shadow-md p-6 space-y-6 question-card">
-                    <div class="question" data-category="env">
-                        <p class="font-semibold text-lg mb-2">On my team, members feel safe to take calculated risks and discuss failures openly as learning opportunities.</p>
-                        <div class="flex items-center space-x-4 rating-group pt-2">
-                            <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
-                            <input type="range" name="q9" min="1" max="7" value="4" class="w-full slider" required>
-                            <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
-                        </div>
-                    </div>
-                    <div class="question" data-category="env">
-                        <p class="font-semibold text-lg mb-2">Team morale is consistently high, and issues like stress are addressed proactively and transparently.</p>
-                        <div class="flex items-center space-x-4 rating-group pt-2">
-                            <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
-                            <input type="range" name="q10" min="1" max="7" value="4" class="w-full slider" required>
-                            <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
-                        </div>
+            <div id="questionsContainer" class="bg-white rounded-lg shadow-md p-6 space-y-6">
+                <div class="question" data-category="env">
+                    <p class="font-semibold text-lg mb-2">On my team, members feel safe to take calculated risks and discuss failures openly as learning opportunities.</p>
+                    <div class="flex items-center space-x-4 rating-group pt-2">
+                        <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
+                        <input type="range" name="q9" min="1" max="7" value="4" class="w-full slider" required>
+                        <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
                     </div>
                 </div>
-            </div>
-
-            <!-- Category 2: Empowers Ownership (Previously Autonomy & Trust) -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-semibold text-gray-700 mb-4 pb-2 border-b-2 border-indigo-200">2. Empowers Ownership</h2>
-                <div class="bg-white rounded-lg shadow-md p-6 space-y-6 question-card">
-                    <div class="question" data-category="autonomy">
-                        <p class="font-semibold text-lg mb-2">Engineers on my team have the autonomy to make decisions within their areas of ownership.</p>
-                        <div class="flex items-center space-x-4 rating-group pt-2">
-                            <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
-                            <input type="range" name="q7" min="1" max="7" value="4" class="w-full slider" required>
-                            <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
-                        </div>
-                    </div>
-                    <div class="question" data-category="autonomy">
-                        <p class="font-semibold text-lg mb-2">My management style focuses on results and impact, giving engineers space to determine their own implementation details.</p>
-                        <div class="flex items-center space-x-4 rating-group pt-2">
-                            <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
-                            <input type="range" name="q8" min="1" max="7" value="4" class="w-full slider" required>
-                            <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
-                        </div>
+                <div class="question" data-category="env">
+                    <p class="font-semibold text-lg mb-2">Team morale is consistently high, and issues like stress are addressed proactively and transparently.</p>
+                    <div class="flex items-center space-x-4 rating-group pt-2">
+                        <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
+                        <input type="range" name="q10" min="1" max="7" value="4" class="w-full slider" required>
+                        <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
                     </div>
                 </div>
-            </div>
-
-            <!-- Category 3: Communicates Clearly (Previously Clear Communication & Strategic Alignment) -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-semibold text-gray-700 mb-4 pb-2 border-b-2 border-indigo-200">3. Communicates Clearly</h2>
-                <div class="bg-white rounded-lg shadow-md p-6 space-y-6 question-card">
-                    <div class="question" data-category="comm">
-                        <p class="font-semibold text-lg mb-2">My team has a clear understanding of the technical direction and how it connects to our business objectives.</p>
-                        <div class="flex items-center space-x-4 rating-group pt-2">
-                            <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
-                            <input type="range" name="q5" min="1" max="7" value="4" class="w-full slider" required>
-                            <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
-                        </div>
-                    </div>
-                    <div class="question" data-category="comm">
-                        <p class="font-semibold text-lg mb-2">Team members can articulate how their individual work contributes to the company's broader goals.</p>
-                        <div class="flex items-center space-x-4 rating-group pt-2">
-                            <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
-                            <input type="range" name="q6" min="1" max="7" value="4" class="w-full slider" required>
-                            <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
-                        </div>
+                <div class="question" data-category="autonomy">
+                    <p class="font-semibold text-lg mb-2">Engineers on my team have the autonomy to make decisions within their areas of ownership.</p>
+                    <div class="flex items-center space-x-4 rating-group pt-2">
+                        <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
+                        <input type="range" name="q7" min="1" max="7" value="4" class="w-full slider" required>
+                        <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
                     </div>
                 </div>
-            </div>
-            
-            <!-- Category 4: Cultivates Talent (Previously Growth & Development Support) -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-semibold text-gray-700 mb-4 pb-2 border-b-2 border-indigo-200">4. Cultivates Talent</h2>
-                <div class="bg-white rounded-lg shadow-md p-6 space-y-6 question-card">
-                    <div class="question" data-category="growth">
-                        <p class="font-semibold text-lg mb-2">My team members are provided with clear opportunities and resources for professional growth and skill development.</p>
-                        <div class="flex items-center space-x-4 rating-group pt-2">
-                            <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
-                            <input type="range" name="q3" min="1" max="7" value="4" class="w-full slider" required>
-                            <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
-                        </div>
-                    </div>
-                    <div class="question" data-category="growth">
-                        <p class="font-semibold text-lg mb-2">My direct reports receive regular, helpful guidance regarding their career paths and development.</p>
-                        <div class="flex items-center space-x-4 rating-group pt-2">
-                            <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
-                            <input type="range" name="q4" min="1" max="7" value="4" class="w-full slider" required>
-                            <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
-                        </div>
+                <div class="question" data-category="autonomy">
+                    <p class="font-semibold text-lg mb-2">My management style focuses on results and impact, giving engineers space to determine their own implementation details.</p>
+                    <div class="flex items-center space-x-4 rating-group pt-2">
+                        <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
+                        <input type="range" name="q8" min="1" max="7" value="4" class="w-full slider" required>
+                        <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
                     </div>
                 </div>
-            </div>
-
-            <!-- Category 5: Shows Technical Credibility (Previously Technical Credibility) -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-semibold text-gray-700 mb-4 pb-2 border-b-2 border-indigo-200">5. Shows Technical Credibility</h2>
-                <div class="bg-white rounded-lg shadow-md p-6 space-y-6 question-card">
-                    <div class="question" data-category="tech">
-                        <p class="font-semibold text-lg mb-2">My current technical knowledge allows me to effectively contribute to and guide system and architectural decisions.</p>
-                        <div class="flex items-center space-x-4 rating-group pt-2">
-                            <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
-                            <input type="range" name="q1" min="1" max="7" value="4" class="w-full slider" required>
-                            <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
-                        </div>
+                <div class="question" data-category="comm">
+                    <p class="font-semibold text-lg mb-2">My team has a clear understanding of the technical direction and how it connects to our business objectives.</p>
+                    <div class="flex items-center space-x-4 rating-group pt-2">
+                        <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
+                        <input type="range" name="q5" min="1" max="7" value="4" class="w-full slider" required>
+                        <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
                     </div>
-                    <div class="question" data-category="tech">
-                        <p class="font-semibold text-lg mb-2">I allocate my time between technical and management responsibilities in a way that best serves the team's needs.</p>
-                        <div class="flex items-center space-x-4 rating-group pt-2">
-                            <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
-                            <input type="range" name="q2" min="1" max="7" value="4" class="w-full slider" required>
-                            <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
-                        </div>
+                </div>
+                <div class="question" data-category="comm">
+                    <p class="font-semibold text-lg mb-2">Team members can articulate how their individual work contributes to the company's broader goals.</p>
+                    <div class="flex items-center space-x-4 rating-group pt-2">
+                        <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
+                        <input type="range" name="q6" min="1" max="7" value="4" class="w-full slider" required>
+                        <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
+                    </div>
+                </div>
+                <div class="question" data-category="growth">
+                    <p class="font-semibold text-lg mb-2">My team members are provided with clear opportunities and resources for professional growth and skill development.</p>
+                    <div class="flex items-center space-x-4 rating-group pt-2">
+                        <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
+                        <input type="range" name="q3" min="1" max="7" value="4" class="w-full slider" required>
+                        <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
+                    </div>
+                </div>
+                <div class="question" data-category="growth">
+                    <p class="font-semibold text-lg mb-2">My direct reports receive regular, helpful guidance regarding their career paths and development.</p>
+                    <div class="flex items-center space-x-4 rating-group pt-2">
+                        <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
+                        <input type="range" name="q4" min="1" max="7" value="4" class="w-full slider" required>
+                        <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
+                    </div>
+                </div>
+                <div class="question" data-category="tech">
+                    <p class="font-semibold text-lg mb-2">My current technical knowledge allows me to effectively contribute to and guide system and architectural decisions.</p>
+                    <div class="flex items-center space-x-4 rating-group pt-2">
+                        <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
+                        <input type="range" name="q1" min="1" max="7" value="4" class="w-full slider" required>
+                        <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
+                    </div>
+                </div>
+                <div class="question" data-category="tech">
+                    <p class="font-semibold text-lg mb-2">I allocate my time between technical and management responsibilities in a way that best serves the team's needs.</p>
+                    <div class="flex items-center space-x-4 rating-group pt-2">
+                        <span class="text-sm text-gray-500 w-28 text-left">Strongly Disagree</span>
+                        <input type="range" name="q2" min="1" max="7" value="4" class="w-full slider" required>
+                        <span class="text-sm text-gray-500 w-28 text-right">Strongly Agree</span>
                     </div>
                 </div>
             </div>
@@ -222,6 +189,18 @@
     </div>
 
     <script>
+        // Shuffle questions on each page load
+        (function shuffleQuestions() {
+            const container = document.getElementById('questionsContainer');
+            if (!container) return;
+            const items = Array.from(container.children);
+            for (let i = items.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [items[i], items[j]] = [items[j], items[i]];
+            }
+            items.forEach(el => container.appendChild(el));
+        })();
+
         document.getElementById('leadershipQuiz').addEventListener('submit', function(event) {
             event.preventDefault();
 
