feat(links): Add GitHub profile link to contact section
- Add GitHub link button to links section in index.html
- Implement MediumPurple styling for GitHub link to match design system
- Position GitHub link between LinkedIn and Resume links
- Apply consistent box-shadow and border styling to new GitHub button

--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
         <div>
             <a class="link-email" href="mailto:homepage@glennsantos.com" target="_blank" rel="noopener">Email</a>
             <a class="link-linkedin" href="https://glennsantos.com/linkedin" target="_blank" rel="noopener">LinkedIn</a>
+            <a class="link-github" href="https://github.com/glennsantos" target="_blank" rel="noopener">Github</a>
             <a class="link-resume" href="https://glennsantos.com/resume" target="_blank" rel="noopener">Resume</a>
         </div>
     </section>
