feat(portfolio): Add AI Training project showcase with Quantrics asset
- Add Quantrics training deck visual asset (images/quantrics.png)
- Add AI Training project card to portfolio section linking to training materials
- Include description of AI training and workshops conducted for organizations
- Highlight training partnerships with WayMaker HQ, Quantrics/NQX, and others
- Expand portfolio to showcase professional training and speaking engagements

--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
           <div>
             <div>
               <h3>
+                <a href="https://github.com/glennsantos/glennsantos.com/blob/main/training-decks/Solving%20Problems%20with%20AI%20%5BQuantrics%20Geekfest%202025%5D%20%5BHandout%5D.pdf" target="_blank" rel="noopener">AI Training</a>
+              </h3>
+              <p>I conduct training and workshops around AI for various organizations, including WayMaker HQ, Quantrics / NQX, and more.</p>
+            </div>
+            <img src="images/quantrics.png" alt="AI Training screenshot">
+          </div>
+
+          <div>
+            <div>
+              <h3>
                 <a href="https://lnkd.in/p/gf2Z3BkG" target="_blank" rel="noopener">Sales Reporting Webapp</a>
               </h3>
               <p>A mobile-first webapp for digitizing sales reports for an equipment manufacturer, removing dependencies on paper forms and chat messages.</p>
