feat(portfolio): Add AI training projects and reorganize project showcase
- Move SPAR-framework.jpg from training-decks to images directory
- Add quantrics-geekfest.jpg image for AI Training project
- Add recengg.jpg image for Recruitment Engine project
- Add verticard.jpeg image for Verticard project
- Update AI Training section to use new quantrics-geekfest.jpg image
- Add SPAR Framework project showcase with problem-solving methodology description
- Add Recruitment Engine project showcase with AI-powered candidate assessment details
- Add Verticard project showcase with QR-based business card app description
- Reorganize portfolio layout to better highlight AI and training-related projects

--- a/index.html
+++ b/index.html
@@ -71,7 +71,27 @@
               </h3>
               <p>I conduct training and workshops around AI for various organizations, including WayMaker HQ, Quantrics / NQX, and more.</p>
             </div>
-            <img src="images/quantrics.png" alt="AI Training screenshot">
+            <img src="images/quantrics-geekfest.jpg" alt="AI Training screenshot">
+          </div>
+
+          <div>
+            <div>
+              <h3>
+                <a href="images/SPAR-framework.jpg" target="_blank" rel="noopener">SPAR Framework</a>
+              </h3>
+              <p>A problem-solving framework whereby AI and humans work together to rapidly solve complex problems effectively. It can be applied to software development and other types of projects.</p>
+            </div>
+            <img src="images/SPAR-framework.jpg" alt="SPAR Framework">
+          </div>
+
+          <div>
+            <div>
+              <h3>
+                <a href="https://www.linkedin.com/posts/glennsantos_builtwithai-learninpublic-recruitment-activity-7392406698478563328-oRhT" target="_blank" rel="noopener">Recruitment Engine</a>
+              </h3>
+              <p>An AI-powered command-line tool that helps assess developer candidates using OSINT, even before the interview. It creates a comprehensive report of their talent-work fit, talent-team fit and talent-mindset fit.</p>
+            </div>
+            <img src="images/recengg.jpg" alt="Recruitment Engine screenshot">
           </div>
 
           <div>
@@ -84,6 +104,8 @@
             <img src="images/sales-reporting-webapp.png" alt="Sales Reporting Webapp screenshot">
           </div>
 
+          
+
           <div>
             <div>
               <h3>
@@ -92,6 +114,16 @@
               <p>An ecommerce service marketplace in the Philippines that connects buyers and sellers. Averages 29% yearly growth with 7,000 MAU.</p>
             </div>
             <img src="images/199jobs.jpg" alt="199Jobs screenshot">
+          </div>
+
+          <div>
+            <div>
+              <h3>
+                <a href="https://verticard.vercel.app" target="_blank" rel="noopener">Verticard</a>
+              </h3>
+              <p>A FREE business card app so you can share your contacts from your phone via QR. Check it out for yourself!</p>
+            </div>
+            <img src="images/verticard.jpeg" alt="Verticard screenshot">
           </div>
 
           <div>
