feat(portfolio): Reorganize projects showcase and update eHeads image
- Add new eHeads community photo (IMG-20251024-WA0025.jpg)
- Reorder projects to prioritize Recruitment Engine, SPAR Framework, and Sales Reporting Webapp
- Move AI Training to later position in project list
- Add Developer Mentorship Program project showcase
- Update eHeads description to reflect 200+ members milestone
- Update 199Jobs description to past tense reflecting project completion
- Reorganize project cards for better visual hierarchy and relevance

--- a/index.html
+++ b/index.html
@@ -53,25 +53,16 @@
     
     <section id="projects-section" class="section">
         <div id="projects-wrapper">
-          <div>
-            <div>
-              <h3>
-                <a href="https://eheads.org/" target="_blank" rel="noopener">eHeads</a>
-              </h3>
-              <p>A community of engineering leaders that focuses on learning, helping each other, and raising up the next generation of tech leaders.</p>
-            </div>
-            <img src="images/eheads-banner-350x250.jpg" alt="eHeads screenshot">
-          </div>
 
 
           <div>
             <div>
               <h3>
-                <a href="https://github.com/glennsantos/glennsantos.com/blob/main/training-decks/Solving%20Problems%20with%20AI%20%5BQuantrics%20Geekfest%202025%5D%20%5BHandout%5D.pdf" target="_blank" rel="noopener">AI Training</a>
+                <a href="https://www.linkedin.com/posts/glennsantos_builtwithai-learninpublic-recruitment-activity-7392406698478563328-oRhT" target="_blank" rel="noopener">Recruitment Engine</a>
               </h3>
-              <p>I conduct training and workshops around AI for various organizations, including WayMaker HQ, Quantrics / NQX, and more.</p>
+              <p>An AI-powered command-line tool that helps assess developer candidates using OSINT, even before the interview. It creates a comprehensive report of their talent-work fit, talent-team fit and talent-mindset fit.</p>
             </div>
-            <img src="images/quantrics-geekfest.jpg" alt="AI Training screenshot">
+            <img src="images/recengg.jpg" alt="Recruitment Engine screenshot">
           </div>
 
           <div>
@@ -87,33 +78,62 @@
           <div>
             <div>
               <h3>
-                <a href="https://www.linkedin.com/posts/glennsantos_builtwithai-learninpublic-recruitment-activity-7392406698478563328-oRhT" target="_blank" rel="noopener">Recruitment Engine</a>
+                <a href="https://lnkd.in/p/gf2Z3BkG" target="_blank" rel="noopener">Sales Reporting Webapp</a>
               </h3>
-              <p>An AI-powered command-line tool that helps assess developer candidates using OSINT, even before the interview. It creates a comprehensive report of their talent-work fit, talent-team fit and talent-mindset fit.</p>
+              <p>A mobile-first webapp for digitizing sales reports for an equipment manufacturer, removing dependencies on paper forms and chat messages. Built in 2 weeks with SPAR framework</p>
             </div>
-            <img src="images/recengg.jpg" alt="Recruitment Engine screenshot">
+            <img src="images/sales-reporting-webapp.png" alt="Sales Reporting Webapp screenshot">
           </div>
 
           <div>
             <div>
               <h3>
-                <a href="https://lnkd.in/p/gf2Z3BkG" target="_blank" rel="noopener">Sales Reporting Webapp</a>
+                <a href="https://eheads.org/" target="_blank" rel="noopener">eHeads</a>
               </h3>
-              <p>A mobile-first webapp for digitizing sales reports for an equipment manufacturer, removing dependencies on paper forms and chat messages.</p>
+              <p>A community of engineering leaders that focuses on learning, helping each other, and raising up the next generation of tech leaders. 200+ leaders and growing.</p>
             </div>
-            <img src="images/sales-reporting-webapp.png" alt="Sales Reporting Webapp screenshot">
+            <img src="images/IMG-20251024-WA0025.jpg" alt="eHeads screenshot">
           </div>
 
+          <div>
+            <div>
+              <h3>
+                <a href="https://lnkd.in/p/gCxFYA8c" target="_blank" rel="noopener">Retail Location Viability Analyzer</a>
+              </h3>
+              <p>A web-based application for analyzing foot traffic indicators in specific locations using OpenStreetMap data.</p>
+            </div>
+            <img src="images/retail-location-viability-analyzer-ai.png" alt="Retail Location Viability Analyzer screenshot">
+          </div>
           
+          <div>
+            <div>
+              <h3>
+                <a href="https://github.com/glennsantos/glennsantos.com/blob/main/training-decks/Solving%20Problems%20with%20AI%20%5BQuantrics%20Geekfest%202025%5D%20%5BHandout%5D.pdf" target="_blank" rel="noopener">AI Training</a>
+              </h3>
+              <p>I conduct training and workshops around AI for various organizations, including WayMaker HQ, Quantrics / NQX, and more.</p>
+            </div>
+            <img src="images/quantrics-geekfest.jpg" alt="AI Training screenshot">
+          </div>
+
 
           <div>
             <div>
               <h3>
                 <a href="https://www.techinasia.com/meet-199jobs-philippines-answer-fiverr" target="_blank" rel="noopener">199Jobs</a>
               </h3>
-              <p>An ecommerce service marketplace in the Philippines that connects buyers and sellers. Averages 29% yearly growth with 7,000 MAU.</p>
+              <p>An ecommerce service marketplace in the Philippines that connected buyers and sellers. Averaged 29% yearly growth with 7,000 MAU during its peak.</p>
             </div>
             <img src="images/199jobs.jpg" alt="199Jobs screenshot">
+          </div>
+
+          <div>
+            <div>
+              <h3>
+                <a href="https://tally.so/r/3leK5w" target="_blank" rel="noopener">Developer Mentorship Program</a>
+              </h3>
+              <p>A mentorship program to help developers become leaders, using a low-code backend to match developers with mentors.</p>
+            </div>
+            <img src="images/developer-mentorship-program.png" alt="Developer Mentorship Program thumbnail">
           </div>
 
           <div>
@@ -136,15 +156,6 @@
             <img src="images/cv-to-jd-comparison-ai-agent.png" alt="CV-to-JD Comparison AI Agent screenshot">
           </div>
 
-          <div>
-            <div>
-              <h3>
-                <a href="https://lnkd.in/p/gCxFYA8c" target="_blank" rel="noopener">Retail Location Viability Analyzer</a>
-              </h3>
-              <p>A web-based application for analyzing foot traffic indicators in specific locations using OpenStreetMap data.</p>
-            </div>
-            <img src="images/retail-location-viability-analyzer-ai.png" alt="Retail Location Viability Analyzer screenshot">
-          </div>
 
 
           <div>
@@ -197,16 +208,6 @@
               <p>A backend system with APIs for managing cash deposit machines/ATMs, enabling remote management with encryption and strict permissions.</p>
             </div>
             <img src="images/cash-deposit-machine-backend-system-and-apis.jpg" alt="Cash Deposit Machine Backend screenshot">
-          </div>
-
-          <div>
-            <div>
-              <h3>
-                <a href="https://tally.so/r/3leK5w" target="_blank" rel="noopener">Developer Mentorship Program</a>
-              </h3>
-              <p>A mentorship program to help developers become leaders, using a low-code backend to match developers with mentors.</p>
-            </div>
-            <img src="images/developer-mentorship-program.png" alt="Developer Mentorship Program thumbnail">
           </div>
 
           <div>
