fix: Update meeting redirect URLs from Cal.com to Outlook
- Update calendar redirect to use Outlook bookwithme URL
- Update meeting redirect to use Outlook bookwithme URL
- Replace all instances of Cal.com links with corresponding Outlook meeting links
- Maintain redirect functionality across meta refresh, canonical link, and fallback anchor

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Redirecting…</title>
-    <meta http-equiv="refresh" content="0; url=https://cal.com/glennsantos">
-    <link rel="canonical" href="https://cal.com/glennsantos">
+    <meta http-equiv="refresh" content="0; url=https://outlook.office.com/bookwithme/user/0828d1cd3e2e483db764a16317f0c715@behaviorally.com/meetingtype/hnr6zg83K0uUS5-qEa74zw2?anonymous&ismsaljsauthenabled&ep=mlink">
+    <link rel="canonical" href="https://outlook.office.com/bookwithme/user/0828d1cd3e2e483db764a16317f0c715@behaviorally.com/meetingtype/hnr6zg83K0uUS5-qEa74zw2?anonymous&ismsaljsauthenabled&ep=mlink">
     <script>
-      window.location.replace("https://cal.com/glennsantos");
+      window.location.replace("https://outlook.office.com/bookwithme/user/0828d1cd3e2e483db764a16317f0c715@behaviorally.com/meetingtype/hnr6zg83K0uUS5-qEa74zw2?anonymous&ismsaljsauthenabled&ep=mlink");
     </script>
   </head>
   <body>
-    <p>If you are not redirected automatically, <a href="https://cal.com/glennsantos">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="https://outlook.office.com/bookwithme/user/0828d1cd3e2e483db764a16317f0c715@behaviorally.com/meetingtype/hnr6zg83K0uUS5-qEa74zw2?anonymous&ismsaljsauthenabled&ep=mlink">click here</a>.</p>
   </body>
 </html>
