--- a/meeting/index.html
+++ b/meeting/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Redirecting…</title>
-    <meta http-equiv="refresh" content="0; url=https://cal.com/glennsantos/meet">
-    <link rel="canonical" href="https://cal.com/glennsantos/meet">
+    <meta http-equiv="refresh" content="0; url=https://outlook.office.com/bookwithme/user/0828d1cd3e2e483db764a16317f0c715@behaviorally.com/meetingtype/O0X_aFighk-Be1TKpyjSOA2?anonymous&ismsaljsauthenabled&ep=mlink">
+    <link rel="canonical" href="https://outlook.office.com/bookwithme/user/0828d1cd3e2e483db764a16317f0c715@behaviorally.com/meetingtype/O0X_aFighk-Be1TKpyjSOA2?anonymous&ismsaljsauthenabled&ep=mlink">
     <script>
-      window.location.replace("https://cal.com/glennsantos/meet");
+      window.location.replace("https://outlook.office.com/bookwithme/user/0828d1cd3e2e483db764a16317f0c715@behaviorally.com/meetingtype/O0X_aFighk-Be1TKpyjSOA2?anonymous&ismsaljsauthenabled&ep=mlink");
     </script>
   </head>
   <body>
-    <p>If you are not redirected automatically, <a href="https://cal.com/glennsantos/meet">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="https://outlook.office.com/bookwithme/user/0828d1cd3e2e483db764a16317f0c715@behaviorally.com/meetingtype/O0X_aFighk-Be1TKpyjSOA2?anonymous&ismsaljsauthenabled&ep=mlink">click here</a>.</p>
   </body>
 </html>
