chore(images): Replace SPAR framework with SPEC framework
- Remove SPAR-framework.jpg image asset
- Add SPEC-framework.png image asset
- Update framework link text from "SPAR Framework" to "SPEC Framework"
- Update image src and alt attributes to reference SPEC framework
- Align documentation with new framework naming convention

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
           <div>
             <div>
               <h3>
-                <a href="images/SPAR-framework.jpg" target="_blank" rel="noopener">SPAR Framework</a>
+                <a href="images/SPEC-framework.jpg" target="_blank" rel="noopener">SPEC Framework</a>
               </h3>
               <p>A problem-solving framework whereby AI and humans work together to rapidly solve complex problems effectively. It can be applied to software development and other types of projects.</p>
             </div>
-            <img src="images/SPAR-framework.jpg" alt="SPAR Framework">
+            <img src="images/SPEC-framework.jpg" alt="SPEC Framework">
           </div>
 
           <div>
