chore(images): Update SPEC framework image format from JPG to PNG
- Change SPEC framework link href from .jpg to .png format
- Update SPEC framework img src from .jpg to .png format
- Improves image quality and compatibility with modern web standards

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
           <div>
             <div>
               <h3>
-                <a href="images/SPEC-framework.jpg" target="_blank" rel="noopener">SPEC Framework</a>
+                <a href="images/SPEC-framework.png" target="_blank" rel="noopener">SPEC Framework</a>
               </h3>
               <p>A problem-solving framework whereby AI and humans work together to rapidly solve complex problems effectively. It can be applied to software development and other types of projects.</p>
             </div>
-            <img src="images/SPEC-framework.jpg" alt="SPEC Framework">
+            <img src="images/SPEC-framework.png" alt="SPEC Framework">
           </div>
 
           <div>
